--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer{
     }
 }
 
-@media screen and (min-width:380px) {
+@media screen and (man-width:500px) {
     .container{
         text-align: center;
         height: 100%;
@@ -143,7 +143,7 @@ footer{
     }
     button{
         display: inline-block;
-        height: 40px;
+        height: 60px;
     }
 
 }
