--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer{
     }
 }
 
-@media screen and (man-width:500px) {
+@media screen  {
     .container{
         text-align: center;
         height: 100%;
