--- a/style.css
+++ b/style.css
@@ -2,11 +2,7 @@ body{
     margin: 0;
 }
 
-main{
-    min-width: 320px;
-    max-width: 800px;
-    margin: auto;
-}
+
 
 
 #limpeza{
@@ -86,7 +82,6 @@ text-align: center;
  font-size: 18px;
  padding: 50px 50px 5px 50px;
  margin: 0px;
- height: 600px;
  line-height: 2;
  font-weight: bold;
  color: hwb(0 0% 100% / 0.699);
@@ -132,3 +127,19 @@ footer{
     }
 }
 
+@media screen and (max-width:380px) {
+    .container{
+        text-align: center;
+        height: 100%;
+        width: 100%;
+
+    }
+    #maquiagem{
+        height: 100%;
+        width: 100%;
+        display: block;
+     
+    }
+
+
+}
