--- a/limpeza.css
+++ b/limpeza.css
@@ -5,6 +5,9 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     
 }
+body{
+    background-color: #eeb6c1c5;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -55,21 +58,10 @@ section:nth-of-type(1){
 section:nth-of-type(2){
     background-image: url("img/sessaol2.jpg");
 }
+
 p{
-    text-align: justify;
-    background-color: #eeb6c16e;
     font-family: 'Times New Roman', Times, serif;
-    color: rgba(0, 0, 0, 0.815);
-    font-size: x-large;
-    padding: 15px 50px 15px 50px;
-    
-}
-div h1{
-    text-align: justify;
-    color: white;
-    background-color: #eeb6c16e;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 4px 4px 4px 50px;
-    color: rgb(0, 0, 0);
-    
+    color: black;
+    font-size: large;
+    line-height: 35px;
 }
