--- a/olhos.css
+++ b/olhos.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+body{
+    background-color: #eeb6c1c5;
+}
 html{
     scroll-behavior: smooth;
 }
