--- a/limpeza.css
+++ b/limpeza.css
@@ -60,8 +60,16 @@ section:nth-of-type(2){
 }
 
 p{
+    text-align: justify;
+    height: 100%;
+    border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
-    color: black;
-    font-size: large;
-    line-height: 35px;
+    font-size: 18px;
+    padding: 50px 50px 5px 50px;
+    margin: 0px;
+    line-height: 2;
+    font-weight: bold;
+    color: hwb(0 0% 100% / 0.699);
+    column-count: 2;
+    column-gap: 3rem;
 }
