--- a/limpeza.css
+++ b/limpeza.css
@@ -70,6 +70,42 @@ p{
     line-height: 2;
     font-weight: bold;
     color: hwb(0 0% 100% / 0.699);
-    column-count: 2;
+    column-count: 3;
     column-gap: 3rem;
+    column-rule: 5px dotted #f1899e;
+    display: inline-block;
 }
+img{width: 100px;
+height: 90px;
+background-color: #ffffff00;
+border-radius: 50%;
+display: inline-block;
+}
+@media screen and (max-width: 768px) {
+  p{
+    text-align: center;
+    background-color: #eeb6c1c5;
+    height: 100%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.158);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    padding: 50px 50px 5px 50px;
+    margin: 0px;
+    line-height: 2;
+    font-weight: bold;
+    color: hwb(0 0% 100% / 0.699);
+    column-count: 1;
+  }
+    
+    section:nth-of-type(1){
+        background-image: url("img/limpeza.jpg");
+        
+    
+    
+    }
+    section:nth-of-type(2){
+        background-image: url("img/sessaol2.jpg");
+    }
+
+  }
