--- a/olhos.css
+++ b/olhos.css
@@ -70,6 +70,25 @@ p{
     line-height: 2;
     font-weight: bold;
     color: hwb(0 0% 100% / 0.699);
-    column-count: 2;
+    column-count: 3;
     column-gap: 3rem;
+    column-rule: 5px dotted #f1899e;
+    display: inline-block;
+}
+@media screen and (max-width: 768px) {
+    p{
+      text-align: center;
+      background-color: #eeb6c1c5;
+      height: 100%;
+      border-radius: 5px;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.158);
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 18px;
+      padding: 50px 50px 5px 50px;
+      margin: 0px;
+      line-height: 2;
+      font-weight: bold;
+      color: hwb(0 0% 100% / 0.699);
+      column-count: 1;
+    }
 }
