--- a/limpeza.css
+++ b/limpeza.css
@@ -60,7 +60,7 @@ section:nth-of-type(2){
 }
 
 p{
-    text-align: justify;
+    text-align: left;
     height: 100%;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
@@ -75,15 +75,10 @@ p{
     column-rule: 5px dotted #f1899e;
     display: inline-block;
 }
-img{width: 100px;
-height: 90px;
-background-color: #ffffff00;
-border-radius: 50%;
-display: inline-block;
-}
+
 @media screen and (max-width: 768px) {
   p{
-    text-align: center;
+    text-align: left;
     background-color: #eeb6c1c5;
     height: 100%;
     border-radius: 5px;
@@ -96,6 +91,7 @@ display: inline-block;
     font-weight: bold;
     color: hwb(0 0% 100% / 0.699);
     column-count: 1;
+    display: inline-block;
   }
     
     section:nth-of-type(1){
@@ -109,3 +105,7 @@ display: inline-block;
     }
 
   }
+img{
+    margin: 10px 0px 0px 120px;
+
+}
