--- a/olhos.css
+++ b/olhos.css
@@ -60,7 +60,7 @@ section:nth-of-type(3){
     background-image: url("img/lapis.jpg");
 }
 p{
-    text-align: justify;
+    text-align: left;
     height: 100%;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
@@ -77,7 +77,7 @@ p{
 }
 @media screen and (max-width: 768px) {
     p{
-      text-align: center;
+      text-align: left;
       background-color: #eeb6c1c5;
       height: 100%;
       border-radius: 5px;
