--- a/pele.css
+++ b/pele.css
@@ -74,14 +74,14 @@ p{
     column-gap: 3rem;
 }
 p{
-    text-align: justify;
+    text-align: left;
     height: 100%;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     padding: 50px 50px 5px 50px;
     margin: 0px;
-    line-height: 2;
+    line-height: 1.5;
     font-weight: bold;
     color: hwb(0 0% 100% / 0.699);
     column-count: 3;
@@ -92,7 +92,7 @@ p{
 
 @media screen and (max-width: 768px) {
     p{
-      text-align: center;
+      text-align: left;
       background-color: #eeb6c1c5;
       height: 100%;
       border-radius: 5px;
@@ -106,4 +106,7 @@ p{
       color: hwb(0 0% 100% / 0.699);
       column-count: 1;
     }
+}
+.img{
+   margin: 10px 0px 0px 70px;
 }
