--- a/limpeza.css
+++ b/limpeza.css
@@ -75,6 +75,16 @@ p{
     column-rule: 5px dotted #f1899e;
     display: inline-block;
 }
+footer{
+    background-image: linear-gradient(to right, #eeb6c1, #fbdfbb,#c6e5ea);
+    background-size: 100% 100%;
+    animation: degrade-animado 7s infinite alternate;
+    text-align: center;
+    height: 50px;
+    width:100%;
+    color: hwb(0 0% 100% / 0.699);
+    padding-top: 15px;
+}
 
 @media screen and (max-width: 768px) {
   p{
