--- a/pele.css
+++ b/pele.css
@@ -110,3 +110,8 @@ p{
 .img{
    margin: 10px 0px 0px 70px;
 }
+footer{
+    background-image: linear-gradient(to right, #eeb6c1, #fbdfbb,#c6e5ea);
+    background-size: 100% 100%;
+    animation: derade-animado 7s infinite alternate;
+}
