--- a/style.css
+++ b/style.css
@@ -74,18 +74,20 @@ body{
 
 #maquiagem{
 text-align: center;
- background-color: #fbdfbbb6;
+ background-color: #eeb6c160;
  height: 100%;
  border-radius: 5px;
- box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.158);
+ box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.356);
  font-family: 'Times New Roman', Times, serif;
  font-size: 18px;
  padding: 50px 50px 5px 50px;
  margin: 0px;
- line-height: 2;
+ line-height: 2.2;
  font-weight: bold;
- color: hwb(0 0% 100% / 0.699);
- 
+ color: hwb(0 0% 100%);
+ margin: 20px 10px 20px 18px;
+ width: 90%;
+ border-radius: 20px;
 
 }
 #suporte{
@@ -139,3 +141,8 @@ footer{
     }
 
 
+    
+
+body{
+    background-image: url(img/fundo.png);
+}
