--- a/limpeza.css
+++ b/limpeza.css
@@ -118,3 +118,10 @@ footer{
 .img{
     margin: 10px 0px 0px 70px;
  }
+ #insta{
+    
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+   
+}
