--- a/style.css
+++ b/style.css
@@ -136,8 +136,19 @@ footer{
         width: 100%;
 
     }
-    
      
+    footer{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0px 0px 0px 0px;
+    }
+    #maquiagem{
+        height: 100%;
+        width: 100%;
+        padding: 50px 0px 50px 0px;
+        margin: 0px 0px 0px 0px;
+        border-radius: 0px;
     }
 
 
@@ -151,4 +162,5 @@ body{
     width: 20px;
     height: 20px;
    
+}
 }
