--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background-image: url(img/fundo.png);
 }
 
 
@@ -73,22 +74,24 @@ body{
 
 
 #maquiagem{
-text-align: center;
+
  background-color: #eeb6c160;
  height: 100%;
  border-radius: 5px;
  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.356);
- font-family: 'Times New Roman', Times, serif;
- font-size: 18px;
- padding: 50px 50px 5px 50px;
- margin: 0px;
- line-height: 2.2;
- font-weight: bold;
  color: hwb(0 0% 100%);
- margin: 20px 10px 20px 18px;
- width: 90%;
+ margin: 0px 0px 0px 0px;
+ width: 100%;
  border-radius: 20px;
 
+}
+#make{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 50px 50px 5px 50px;
+    line-height: 2.2;
+     font-weight: bold;
 }
 #suporte{
     text-align: center;
@@ -129,38 +132,49 @@ footer{
     }
 }
 
+#insta{
+        
+    width: 20px;
+    height: 20px;
+
+}
+
 @media screen and (max-width:768px) {
     .container{
         text-align: center;
         height: 100%;
         width: 100%;
+        margin: 0px 0px 0px 0px;
 
     }
      
     footer{
         width: 100%;
         height: 100%;
-        margin: 0;
+        margin: auto;
         padding: 0px 0px 0px 0px;
+    }
+    #make{
+        text-align: left;
+        padding: 10px 20px 10px 20px;
+        border-radius: 10px;
+       
+
     }
     #maquiagem{
         height: 100%;
         width: 100%;
-        padding: 50px 0px 50px 0px;
+        padding: 0px 0px 50px 0px;
         margin: 0px 0px 0px 0px;
-        border-radius: 0px;
     }
 
+    #insta{
+        
+        width: 20px;
+        height: 20px;
+    
+    }
 
     
-
-body{
-    background-image: url(img/fundo.png);
-}
-#insta{
-    
-    width: 20px;
-    height: 20px;
-   
-}
-}
+  
+    }
